@@ -2,8 +2,6 @@ menuReplace.label=Trocar...
 menuReplace.accesskey=r
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Trocar con llista de sustitucion(FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Trocar con llista de sustitucion
 listReplace.label=Trocar con llista de sustitución
