@@ -2,8 +2,6 @@ menuReplace.label=Reemplaça...
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Reemplaça amb la llista de substitucions (FoxReplace)
-contextMenuFoxReplace.accesskey=m
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Reemplaça amb la llista de substitucions
 listReplace.label=Reemplaça amb la llista de substitucions
