@@ -2,8 +2,6 @@ menuReplace.label=Replace...
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Replace with substitution list (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Erstat med udskiftningsliste
 listReplace.label=Erstat med udskiftningsliste
