@@ -2,8 +2,6 @@ menuReplace.label=Reemplazar...
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Reemplazar con lista de sustitución (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Reemplazar con lista de sustitución
 listReplace.label=Reemplazar con lista de sustitución
