@@ -2,8 +2,6 @@ menuReplace.label=Remplacer…
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Remplacer en utilisant la liste de substitution (FoxReplace)
-contextMenuFoxReplace.accesskey=i
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Remplacement en utilisant la liste de substitution
 listReplace.label=Remplacer en utilisant la liste de substitution
