@@ -2,8 +2,6 @@ menuReplace.label=リプレース
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Replace with substitution list (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Replace with substitution list
 listReplace.label=Replace with substitution list
