@@ -2,8 +2,6 @@ menuReplace.label=대체…
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=대체어 목록으로 대체 (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=대체어 목록으로 대체
 listReplace.label=대체어 목록으로 대체
