@@ -2,8 +2,6 @@ menuReplace.label=Pakeisti...
 menuReplace.accesskey=a
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Pakeisti pakeitimų sąrašu (FoxReplace)
-contextMenuFoxReplace.accesskey=P
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Pakeisti žodžiais iš keitimų sąrašo
 listReplace.label=Pakeisti žodžiais iš keitimų sąrašo
