@@ -2,8 +2,6 @@ menuReplace.label=Vervangen…
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Vervangen met vervangingslijst (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Vervangen met vervangingslijst
 listReplace.label=Vervangen met vervangingslijst
