@@ -2,8 +2,6 @@ menuReplace.label=Substituir…
 menuReplace.accesskey=s
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Substituir com uma lista (FoxReplace)
-contextMenuFoxReplace.accesskey=f
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Substituir com uma lista
 listReplace.label=Substituir com uma lista
