@@ -2,8 +2,6 @@ menuReplace.label=Замени...
 menuReplace.accesskey=З
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=Ф
-contextMenuFoxReplace.label=Замени са списка за замену (FoxReplace)
-contextMenuFoxReplace.accesskey=С
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Замењује коришћењем списка за замену
 listReplace.label=Замени коришћењем списка за замену
