@@ -2,8 +2,6 @@ menuReplace.label=Ersätt…
 menuReplace.accesskey=r
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=Ersätt med ersättningslista (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=Ersätt med ersättningslista
 listReplace.label=Ersätt med ersättningslista
