@@ -2,8 +2,6 @@ menuReplace.label=替换...
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=用替换列表进行替换 (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=用替换列表进行替换
 listReplace.label=用替换列表进行替换
