@@ -2,8 +2,6 @@ menuReplace.label=取代…
 menuReplace.accesskey=e
 menuToolsFoxReplace.label=FoxReplace
 menuToolsFoxReplace.accesskey=F
-contextMenuFoxReplace.label=以取代列表執行取代 (FoxReplace)
-contextMenuFoxReplace.accesskey=l
 toolbarButton.label=FoxReplace
 toolbarButton.tooltip=以取代列表執行取代
 listReplace.label=以取代列表執行取代
