@@ -7,7 +7,14 @@
 
   "content_security_policy": "script-src 'self'; object-src 'self'; style-src 'self' 'unsafe-inline'",
 
-  "permissions": ["<all_urls>", "alarms", "downloads", "storage"],
+  "permissions": ["<all_urls>", "alarms", "contextMenus", "downloads", "storage"],
+
+  "icons": {
+    "16": "icons/toolbaricon16.png",
+    "32": "icons/toolbaricon32.png",
+    "48": "icons/foxreplace48.png",
+    "96": "icons/foxreplace96.png"
+  },
 
   "background": {
     "scripts": ["xregexp-all-min.js", "core.js", "periodicreplace.js", "storage.js", "subscription.js", "background.js"]
