@@ -1,4 +1,5 @@
 * Shortcuts moved to the embedded WebExtension.
+* Context menu moved to the embedded WebExtension.
 
 v1.1.3 (2017-08-28)
 * Corrected a wrong string.
